--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: fantasy;
+    font-weight: 100;
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 60px;
+    /*background-image: url('../images/68411523-bonfire-wallpapers\ \(1\).jpg');*/
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: rgb(250, 250, 250);
+    background-color: rgb(126, 141, 99);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,4 +16,41 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+img {
+  margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: 30px;
+    border-width: 6px;
+    border-style: double;
+    border-color: rgb(36, 36, 36);
+    width: 260px;
+    height: 160px;
+  
+}
+.a  {
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+    margin: 20px auto;
+}
+.b {
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+    margin: 20px auto;
+}
+.c {
+text-align: center;
+font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+    margin: 20px auto;
+}
+input {
+  margin-top: auto;
+  margin-bottom: 10px;
 }
